--- a/travel/contactus.html
+++ b/travel/contactus.html
@@ -19,44 +19,46 @@
             <a href="contactus.html">Contact Us</a>
         </nav>
       </header>
-      <div id="div-img">
-        <div id="img-box">
-          <img id="img-contact" src="images/Experience.jpg" alt="Travel Experience">
-        </div>
-        <section id="img-msg">
-          <h1>Share your experiences with us and get travels discounts</h1>
-        </section>
-      </div>
+
       <main class="home-grid">
-        <section class="contact-box">
-            <h4>Be part of our community by sharing your travel experiences. We need you to help others, your experiences matter. Share with us your trip experience, and tell us about recommended sites for photos and recommended stays.</h4>
+        <div id="div-img">
+          <div id="img-box">
+            <img class="img" src="images/Experience.jpg" alt="Travel Experience">
+          </div>
+          <section id="img-msg">
+            <h1>Share your experiences with us and get travels discounts</h1>
+          </section>
+        </div>
+        <div class="contact-box">
+            <h4 id="h4-contact">Be part of our community by sharing your travel experiences. We need you to help others, your experiences matter. Share with us your trip experience, and tell us about recommended sites for photos and recommended stays.</h4>
             <img id="img-contact" src="images/type.jpg" alt="TypeComments">
 
-        </section>
-        <section id="form">
-          <div class="space-contactUs">
-            <form>
-                <ul>
-                    <li>
-                        <label for="name">Name:</label>
-                        <input type="text" id="name" name="user_name">
-                    </li>
-                    <li>
-                        <label for="mail">E-mail:</label>
-                        <input type="email" id="mail" name="user_email">
-                    </li>
-                    <li>
-                        <label for="msg">Message:</label>
-                        <textarea type="text" id="msg" name="user_message"></textarea>
-                    </li>
-                    <li>
-                        <button type="submit">Send</button>
-                    </li>
-                </ul>
-    
-            </form>
+          <div id="form">
+            <div class="space-contactUs">
+              <form>
+                  <ul>
+                      <li>
+                          <label for="name">Name:</label>
+                          <input type="text" id="name" name="user_name">
+                      </li>
+                      <li>
+                          <label for="mail">E-mail:</label>
+                          <input type="email" id="mail" name="user_email">
+                      </li>
+                      <li>
+                          <label for="msg">Message:</label>
+                          <textarea type="text" id="msg" name="user_message"></textarea>
+                      </li>
+                      <li class="li-button">
+                          <button type="submit">Send</button>
+                      </li>
+                  </ul>
+      
+              </form>
+            </div>
+          </div>
         </div>
-        </section>
+
       </main>
       <footer>
         <h3>Travel Agency &copy; 2022 - Giovanni Ulloque</h3>
