--- a/travel/contactus.html
+++ b/travel/contactus.html
@@ -48,7 +48,7 @@
                       </li>
                       <li>
                           <label for="msg">Message:</label>
-                          <textarea type="text" id="msg" name="user_message"></textarea>
+                          <textarea id="msg" name="user_message"></textarea>
                       </li>
                       <li class="li-button">
                           <button type="button" onclick="displayElement('img-contact')">Send</button>
